Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19022

InnoDB fails to clean up useless B-tree pages

    XMLWordPrintable

Details

    Description

      The test case of MDEV-14126 demonstrates that InnoDB can end up with an index tree where a non-leaf page has only one child page. Such internal nodes are totally unused and should be removed when the B-tree is being shrunk in the first place. The functions btr_discard_only_page_on_level(), btr_lift_page_up(), or btr_compress() or their callers may have to be revised.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: